# e_robot_lenovo

./: README.md  版本说明
.history/src_myself/kitti_bag/launch/: kitti_bag_20201117165335.launch
lvdai_robot/gnss_publish/: CMakeLists.txt  package.xml  版本说明
lvdai_robot/gnss_publish/msg/: gnss_gphcd.msg
lvdai_robot/gnss_publish/src/: gnss_data.cpp  gnss_pub_sentence.cpp  gnss_sub.cpp  安装过程.txt
lvdai_robot/imu_publish/: CMakeLists.txt  package.xml
lvdai_robot/imu_publish/launch/: imu_bring_up.launch
lvdai_robot/imu_publish/rviz/: imu.rviz
lvdai_robot/imu_publish/src/: imu_data.cpp
lvdai_robot/lvdai_bringup/: CMakeLists.txt  package.xml
lvdai_robot/lvdai_description/: CMakeLists.txt  package.xml
lvdai_robot/lvdai_description/launch/: display.launch  display_sick.launch  display_sick_real.launch  view.launch
lvdai_robot/lvdai_description/mesh/: Realsense_D435.stl  pantilt_plate.stl  plates_collision.stl  realsense_fixed_105mm_15.stl  realsense_plate_80mm.stl
lvdai_robot/lvdai_description/rviz/: view.rviz
lvdai_robot/lvdai_description/urdf/: iqr_4d_robot.urdf.xacro  iqr_4d_robot_sick.urdf.xacro  iqr_4d_robot_sick1.urdf.xacro  iqr_4d_robot_sick_2.urdf.xacro  iqr_4d_robot_sick_real.urdf.xacro  kinect_v2.urdf.xacro  mir100_plates.urdf.xacro  realsense_d435.urdf.xacro  realsense_plate.urdf.xacro  sick_lms5xx.urdf.xacro
lvdai_robot/lvdai_robot_description/: CMakeLists.txt
lvdai_robot/lvdai_robot_description/launch/: display.launch
lvdai_robot/lvdai_robot_description/meshes/: GPS_Link.STL
lvdai_robot/lvdai_robot_description/urdf/: lvdai_robot_description.csv  lvdai_robot_description.urdf
lvdai_robot/motor_control/: CMakeLists.txt  ____________  package.xml
lvdai_robot/motor_control/msg/: speedmsg.msg
lvdai_robot/motor_control/src/: motor_control_pub.cpp  motor_control_sub (copy).cpp  motor_control_sub.cpp
lvdai_robot/robot_move/: CMakeLists.txt  package.xml
lvdai_robot/robot_move/launch/: keyboard_control.launch
lvdai_robot/robot_move/src/: GetSpeed.cpp  keyboard_control.cpp
lvdai_robot/serial_node/: CMakeLists.txt  package.xml
lvdai_robot/serial_node/src/: serial_node.cpp
lvdai_robot_description/: package.xml
lvdai_robot_description/launch/: gazebo.launch
lvdai_robot_description/meshes/: Lidar_Link.STL  imu_Link.STL
lvdai_robot_description/rviz/: urdf.rviz
src_myself/kitti_bag/: CMakeLists.txt  package.xml
src_myself/kitti_bag/launch/: kitti_bag.launch  kitti_tf.launch  ndt_localization_matching.launch
