<?xml version="1.0"?>
<package format="2">
  <name>iqr_4d_description</name>
  <version>1.1.0</version>

  <license>MIT</license>
  <description>The iqr_description package</description>
  
  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>
  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <url type="website">http://wiki.ros.org/iqr_description</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/iqr_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>

